--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>I want to become a developer because I like software industry and how it is evolving day-to-day and I want to earn good income</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
